--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches:    # Array of patterns that match refs/heads
+    - master     # Push events on master branch
+
 
 jobs:
   build:
