--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,8 +17,9 @@ jobs:
       with:
         node-version: 10.x 
     - run: git status
-    - run: git push -v
     - run: git remote -v	
+    - run: git pull -v
+    - run: git push -v
     - run: git config --list && git branch -a
     - run: A=$(cat ${GITHUB_EVENT_PATH} | jq -r '.commits[0].author.email') && git config --global user.email "${A}" && echo email is ${A}
     - run: A=$(cat ${GITHUB_EVENT_PATH} | jq -r '.commits[0].author.name')  && git config --global user.name "${A}" && echo name is ${A}
