--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,8 @@ jobs:
       with:
         node-version: 10.x 
     - run: echo ${GITHUB_TOKEN}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: git status
     - run: git remote -v	
     - run: git pull master -v
