--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,7 @@ jobs:
     - run: git status
     - run: git remote -v	
     - run: git branch -a
+    - run: git log --graph --oneline --all -30
     - run: git pull master -v
     - run: git push master -v
     - run: git config --list && 
