--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,6 @@ jobs:
     - run: git config --list
     - run: A=$(cat ${GITHUB_EVENT_PATH} | jq -r '.commits[0].author.email') && git config --global user.email "${A}" && echo email is ${A}
     - run: A=$(cat ${GITHUB_EVENT_PATH} | jq -r '.commits[0].author.name')  && git config --global user.name "${A}" && echo name is ${A}
-    - run: npm install && npm run build && npx gh-pages -d dist
+    - run: npm install && npm run build && npx gh-pages -d dist git log --graph --oneline --all -30
     #- run: npm install && npm run build && mkdir ../dist/ && cp -r ./dist/ ../dist/ && git checkout -b gh-pages origin/gh-pages && git clean -fd && echo AAAA && ls -lav && echo BBBB && ls -lav ../dist/dist/
     #- run: mkdir ../gh-pages/ && cd ../gh-pages/ && git clone git@github.com:${GITHUB_REPOSITORY}
