--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,7 @@ jobs:
     - run: echo ${GITHUB_TOKEN}  && git remote set-url origin https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - run: git checkout master     
     - run: git status
     - run: git remote -v	
     - run: git branch -a
