--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/setup-node@master
       with:
         node-version: 10.x 
-    - run: echo ${GITHUB_TOKEN:0:10}  && git remote set-url origin https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
+    - run: echo ${GITHUB_TOKEN:0:10}  && git remote set-url origin https://${TEST_TOKEN}@github.com/${GITHUB_REPOSITORY}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: git checkout master     
